# jira-cli

./: .gitignore  CLAUDE.md  ENHANCED_ERROR_HANDLING.md  IMPROVE_OUTPUT.md  MARKDOWN_SUPPORT.md  OUTPUT_IMPROVEMENTS_COMPLETED.md  README.md  RELEASE_NOTES.md  install-dev.sh  install-system.sh  install.bat  install.py  install.sh  jira-agent.md  pyproject.toml  requirements.txt  setup.py  test_error_handling.py  test_markdown.py
.claude/agents/: jira-agent.md  jira-cli-developer.md
src/jira_cli/: .version  __init__.py  exceptions.py  main.py  models.py
src/jira_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/jira_cli/commands/: __init__.py  attachments.py  auth.py  issues.py  projects.py  worklog.py
src/jira_cli/utils/: __init__.py  api.py  auth.py  error_handling.py  formatting.py  markdown_to_adf.py  validation.py
